--- a/docs/20230831.md
+++ b/docs/20230831.md
@@ -1,1 +1,19 @@
 # 20230831
+
+## Go言語 - 学ぶのは容易、習得は難しい
+
+- Goには、組織で大規模に言語を採用する際に活用される、いくつかの本質的な特徴がある
+  - 安定性
+    - 頻繁にアップデート(改良とセキュリティバッチを含む)がされるが安定した言語である
+- 表現力
+  - 自然で直感的にコードを書いたり読んだりできる
+- コンパイル
+  - 高速なコンパイル
+- 安全性
+  - 静的型付け言語
+
+## 単純であれば容易であるとは限らない
+
+- 並行処理のバグに着目した研究である`Understanding Real-World concurrency Bugs in Go`で得られた最も重要な点の一つは、メッセージパッシングはメモリを拠有するよりも扱いやすく、エラーが起こりにくいと思われているにも関わらず、エラーが起こりにくいと思われているにもかかわらず、ブロッキングバグ(blocking bug)のほとんどはチャネルを介したメッセージパッシングのパラダイムを間違って使うことによって引き起こされているということ
+
+> blocking bugとは、プログラムが停止してしまうバグのことです
